﻿发布时间：2018/08/08 20:29
修改记录：
    一、lib脚本修改
	lib脚本版本号：2.0.8
	(1)agps.lua：修正“概率性重复下载两次星历”的问题
		【问题重要性】：一般
		【问题影响模块】：Air800
		【问题出现概率】：启动星历下载流程前，如果GPS没有处于开启状态，才会出现此问题
		【问题出现原因】：GPS开启后，有一个误操作，会导致再次执行星历下载动作
		【问题解决方式】：修复误操作
	(2)aLiYunOta.lua：修正“下载完MCU的升级包，用户脚本使用这个升级包之后，如果没有删除升级包。再去下载升级包，MD5校验出错”的问题
		【问题重要性】：一般
		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
		【问题出现概率】：下载MCU的升级包之后，如果用户脚本没有删除升级包，则必现；如果删除了升级包，则不会出问题
		【问题出现原因】：下载升级包时，lib中不会删除之前模块保存的同名升级包，新的升级包内容追加到了原来的同名升级包文件中
		【问题解决方式】：重新下载升级包时，主动去删除之前的同名升级包
	(3)mqtt.lua：修正“mqtt仅收到qos为0的publish消息，没有外发数据时，并不会按时发送pingreq心跳，导致被服务器超时断开”的问题
		【问题重要性】：一般
		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
		【问题出现概率】：mqtt仅收到qos为0的publish消息，没有外发数据时，必现
		【问题出现原因】：之前的程序以最后一次接收或者发送数据的时间为基准计算心跳时间
		【问题解决方式】：以最后一次发送数据的时间为基准计算心跳时间
	(4)mqtt.lua：recv(timeout)新增参数msg，recv(timeout,msg)，msg为消息参数，发布msg消息，可以唤醒recv等待的mqtt线程
	(5)socket.lua：recv(timeout)新增参数msg，recv(timeout,msg)，msg为消息参数，发布msg消息，可以唤醒recv等待的socket线程
    二、demo脚本修改
	(1)http：新增“multipart/form-data模式，POST上传文本参数和文件”的功能示例代码
	(2)ui、qrcode：删除彩屏驱动的填充色配置，此功能无用
	(3)json：优化json.decode接口运行结果的判断




发布时间：2018/07/30 16:59
修改记录：
    一、lib脚本修改
	lib脚本版本号：2.0.7
	(1)audio.lua：新增stop接口，可以停止正在播放的音频
	(2)patch.lua：修正“没有require errDump功能模块时，task运行产生语法错误时找不到errDump导致重启”的问题
		【问题重要性】：一般
		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
		【问题出现概率】：必现；
		【问题出现原因】：按照设计，task运行产生语法错误时，会停止当前task的运行，会调用errDump功能模块上报运行错误到调试服务器，并不会导致重启；
				  现在因为没有require errDump功能模块，导致重启
		【问题解决方式】：判断是否require errDump功能模块，如果加载了，上报错误到调试服务器；如果没有加载，直接在trace中输出错误信息
	(2)record.lua：修正“存在录音文件的条件下，如果重启软件，重启后，record.getSize()接口读取的录音时长为0”的问题
		【问题重要性】：一般
		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
		【问题出现概率】：必现；
		【问题出现原因】：返回的录音时长是在内存中存储的，重启后，会清0
		【问题解决方式】：根据录音文件的大小实时计算录音时长
	(4)misc.lua：新增getMuid接口，可以获取合宙模块的唯一识别码
    二、demo脚本修改
	(1)aLiYun：新增“升级包下载完成后，通过uart发送到mcu”的功能
	(2)socketSsl：原来的证书文件已过期，更新证书文件




发布时间：2018/07/13 14:36
修改记录：
    一、lib脚本修改
	lib脚本版本号：2.0.6
	(1)link.lua：新增shut接口，可以去激活PDP
	(2)update.lua：新增“是否从阿里云服务器下载升级包”的功能
		【新功能重要性】：一般