@@ -1,4 +1,13 @@
-﻿发布时间：2018/08/08 20:29
+发布时间：2018/08/09 22:55
+修改记录：
+	一、lib脚本修改
+	lib脚本版本号：2.0.9
+	(1)ril.lua: 修正ril的软狗概率重启事件
+		【问题重要性】：重要
+		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
+		【问题出现原因】：增加SSL后，有概率会同时启动两个或更多个同名回调函数的定时器，而停止定时器的时候只停止了1个，另外一个原因是底层send后返回send ok（failed)时间延长超过1分钟默认值了。
+		【问题解决方式】：修改软狗默认时间为2分钟，修改停止函数为sys.timerStopAll(timeout)
+发布时间：2018/08/08 20:29
 修改记录：
     一、lib脚本修改
 	lib脚本版本号：2.0.8
